--- a/Changes
+++ b/Changes
@@ -7,3 +7,6 @@ Revision history for Perl extension CCCP::SQLiteWrap.
 0.02  Fri Dec  7 12:15:53 2012
     - some sugar and debug
     - fix connect method
+    
+0.021  Mon May  6 19:51:31 2013
+    - remove File::Temp dependency    
